{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 127,
  "lineage": "0fa4dc81-902d-2807-a304-b081b3a0261e",
  "resources": [
    {
      "module": "module.argo_cd",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "argocd_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].eks",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd-server",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "argocd",
                  "meta.helm.sh/release-namespace": "argocd"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "server",
                  "app.kubernetes.io/instance": "argocd",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "argocd-server",
                  "app.kubernetes.io/part-of": "argocd",
                  "app.kubernetes.io/version": "v2.8.7",
                  "helm.sh/chart": "argo-cd-5.51.6"
                },
                "name": "argocd-server",
                "namespace": "argocd",
                "resource_version": "4446",
                "uid": "a11e6d60-f199-4139-8f7a-3656cfa1bf10"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.240.223",
                "cluster_ips": [
                  "172.20.240.223"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30206,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "https",
                    "node_port": 30918,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/instance": "argocd",
                  "app.kubernetes.io/name": "argocd-server"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "aa11e6d60f19941398f7a3656cfa1bf1-1482993650.us-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.argo_cd",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].eks",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "name": "argocd"
                },
                "name": "argocd",
                "resource_version": "4009",
                "uid": "eec9ba99-2009-4046-b6ca-fb5cdab2ce8e"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "argocd"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_security_group.eks_cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:security-group/sg-02dedc76b7fca8370",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02dedc76b7fca8370",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "goit-devops-project-eks-cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "908061117191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "goit-devops-project",
              "ManagedBy": "terraform",
              "Name": "goit-devops-project-eks-cluster-cluster-sg",
              "Project": "goit-devops-project"
            },
            "tags_all": {
              "Environment": "goit-devops-project",
              "ManagedBy": "terraform",
              "Name": "goit-devops-project-eks-cluster-cluster-sg",
              "Project": "goit-devops-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:security-group/sg-0eb3bbbda06f816c1",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb3bbbda06f816c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02dedc76b7fca8370"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02dedc76b7fca8370"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "goit-devops-project-eks-cluster-nodes-sg",
            "name_prefix": "",
            "owner_id": "908061117191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "goit-devops-project",
              "ManagedBy": "terraform",
              "Name": "goit-devops-project-eks-cluster-nodes-sg",
              "Project": "goit-devops-project"
            },
            "tags_all": {
              "Environment": "goit-devops-project",
              "ManagedBy": "terraform",
              "Name": "goit-devops-project-eks-cluster-nodes-sg",
              "Project": "goit-devops-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].eks",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins/jenkins",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "jenkins",
                  "meta.helm.sh/release-namespace": "jenkins"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "jenkins-controller",
                  "app.kubernetes.io/instance": "jenkins",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "jenkins",
                  "helm.sh/chart": "jenkins-4.8.3"
                },
                "name": "jenkins",
                "namespace": "jenkins",
                "resource_version": "8303",
                "uid": "c10f6e14-d48c-4832-b790-baac744fa678"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.125.19",
                "cluster_ips": [
                  "172.20.125.19"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "load_balancer_source_ranges": [
                  "0.0.0.0/0"
                ],
                "port": [
                  {
                    "name": "http",
                    "node_port": 31311,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "jenkins-controller",
                  "app.kubernetes.io/instance": "jenkins"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "ac10f6e14d48c4832b790baac744fa67-1627890427.us-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].eks",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "name": "jenkins"
                },
                "name": "jenkins",
                "resource_version": "4010",
                "uid": "cad3da69-a760-4191-bc3d-14700687b9fb"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "jenkins"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_security_group.eks_cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].eks",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "4011",
                "uid": "e5b365e5-0301-41a9-8b55-06ddd5ed4756"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_security_group.eks_cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:security-group/sg-01128119aff93a4aa",
            "description": "DB access",
            "egress": [],
            "id": "sg-01128119aff93a4aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "goit-default-db-sg",
            "name_prefix": "",
            "owner_id": "908061117191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "default",
              "Project": "goit"
            },
            "tags_all": {
              "Env": "default",
              "Project": "goit"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.0.0/16",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-3359769175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01128119aff93a4aa",
            "security_group_rule_id": "sgr-055cc4b006a35862e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_security_group.this",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0143a564cbf978c84",
            "arn": "arn:aws:ec2:us-west-2:908061117191:elastic-ip/eipalloc-0143a564cbf978c84",
            "association_id": "eipassoc-0605f7e49aea2df0f",
            "domain": "vpc",
            "id": "eipalloc-0143a564cbf978c84",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0a3c5eb06b51b1dcb",
            "private_dns": "ip-10-0-1-248.us-west-2.compute.internal",
            "private_ip": "10.0.1.248",
            "public_dns": "ec2-100-23-198-6.us-west-2.compute.amazonaws.com",
            "public_ip": "100.23.198.6",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "goit-devops-project-vpc-eip-1"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b51e8fed3a5f441",
            "arn": "arn:aws:ec2:us-west-2:908061117191:elastic-ip/eipalloc-01b51e8fed3a5f441",
            "association_id": "eipassoc-0caaa5ca54e50de7e",
            "domain": "vpc",
            "id": "eipalloc-01b51e8fed3a5f441",
            "network_border_group": "us-west-2",
            "network_interface": "eni-01a2e9b1478cb2741",
            "private_dns": "ip-10-0-2-254.us-west-2.compute.internal",
            "private_ip": "10.0.2.254",
            "public_dns": "ec2-52-41-97-99.us-west-2.compute.amazonaws.com",
            "public_ip": "52.41.97.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "goit-devops-project-vpc-eip-2"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02815a72604c82b41",
            "arn": "arn:aws:ec2:us-west-2:908061117191:elastic-ip/eipalloc-02815a72604c82b41",
            "association_id": "eipassoc-0f17bcd928ea0a017",
            "domain": "vpc",
            "id": "eipalloc-02815a72604c82b41",
            "network_border_group": "us-west-2",
            "network_interface": "eni-01d5f5c18c798d4a3",
            "private_dns": "ip-10-0-3-167.us-west-2.compute.internal",
            "private_ip": "10.0.3.167",
            "public_dns": "ec2-34-209-43-151.us-west-2.compute.amazonaws.com",
            "public_ip": "34.209.43.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "goit-devops-project-vpc-eip-3"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-eip-3"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:internet-gateway/igw-020b5bb62ecea7d18",
            "id": "igw-020b5bb62ecea7d18",
            "owner_id": "908061117191",
            "tags": {
              "Name": "goit-devops-project-vpc-igw"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-igw"
            },
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0143a564cbf978c84",
            "association_id": "eipassoc-0605f7e49aea2df0f",
            "connectivity_type": "public",
            "id": "nat-00dfedb759df04b89",
            "network_interface_id": "eni-0a3c5eb06b51b1dcb",
            "private_ip": "10.0.1.248",
            "public_ip": "100.23.198.6",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e240c39bfd0791a4",
            "tags": {
              "Name": "goit-devops-project-vpc-nat-gw-1"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b51e8fed3a5f441",
            "association_id": "eipassoc-0caaa5ca54e50de7e",
            "connectivity_type": "public",
            "id": "nat-0a8bef6aea87e75db",
            "network_interface_id": "eni-01a2e9b1478cb2741",
            "private_ip": "10.0.2.254",
            "public_ip": "52.41.97.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04c6e0b84e72239be",
            "tags": {
              "Name": "goit-devops-project-vpc-nat-gw-2"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02815a72604c82b41",
            "association_id": "eipassoc-0f17bcd928ea0a017",
            "connectivity_type": "public",
            "id": "nat-05abe784b297e08cd",
            "network_interface_id": "eni-01d5f5c18c798d4a3",
            "private_ip": "10.0.3.167",
            "public_ip": "34.209.43.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02bd87808a0435dc6",
            "tags": {
              "Name": "goit-devops-project-vpc-nat-gw-3"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-nat-gw-3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:route-table/rtb-02dd5baf280bd60d7",
            "id": "rtb-02dd5baf280bd60d7",
            "owner_id": "908061117191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00dfedb759df04b89",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "goit-devops-project-vpc-private-rt-1"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:route-table/rtb-0972bcb7fbe0b2246",
            "id": "rtb-0972bcb7fbe0b2246",
            "owner_id": "908061117191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a8bef6aea87e75db",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "goit-devops-project-vpc-private-rt-2"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:route-table/rtb-0b9dc4bd74224724e",
            "id": "rtb-0b9dc4bd74224724e",
            "owner_id": "908061117191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05abe784b297e08cd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "goit-devops-project-vpc-private-rt-3"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-private-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:route-table/rtb-0a12d099897aa7939",
            "id": "rtb-0a12d099897aa7939",
            "owner_id": "908061117191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020b5bb62ecea7d18",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "goit-devops-project-vpc-public-rt"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029efc233f5bfb929",
            "route_table_id": "rtb-02dd5baf280bd60d7",
            "subnet_id": "subnet-05a243a7da8a8afce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0099a689dc47e30fa",
            "route_table_id": "rtb-0972bcb7fbe0b2246",
            "subnet_id": "subnet-055fd0ab52b90417a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e99deee194d061d",
            "route_table_id": "rtb-0b9dc4bd74224724e",
            "subnet_id": "subnet-02116f0f3c1f48af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a2c5a36ad90383c",
            "route_table_id": "rtb-0a12d099897aa7939",
            "subnet_id": "subnet-0e240c39bfd0791a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08137dbc67a056e8a",
            "route_table_id": "rtb-0a12d099897aa7939",
            "subnet_id": "subnet-04c6e0b84e72239be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0175741d5bb90358a",
            "route_table_id": "rtb-0a12d099897aa7939",
            "subnet_id": "subnet-02bd87808a0435dc6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:subnet/subnet-05a243a7da8a8afce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a243a7da8a8afce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "908061117191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goit-devops-project-vpc-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:subnet/subnet-055fd0ab52b90417a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055fd0ab52b90417a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "908061117191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goit-devops-project-vpc-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:subnet/subnet-02116f0f3c1f48af6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02116f0f3c1f48af6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "908061117191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goit-devops-project-vpc-private-subnet-3",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-private-subnet-3",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:subnet/subnet-0e240c39bfd0791a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e240c39bfd0791a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "908061117191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goit-devops-project-vpc-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:subnet/subnet-04c6e0b84e72239be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c6e0b84e72239be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "908061117191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goit-devops-project-vpc-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:subnet/subnet-02bd87808a0435dc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bd87808a0435dc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "908061117191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goit-devops-project-vpc-public-subnet-3",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc-public-subnet-3",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b19dd4a902b506cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:908061117191:vpc/vpc-0b19dd4a902b506cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0656f93bf51591dba",
            "default_route_table_id": "rtb-028cd150230219628",
            "default_security_group_id": "sg-010097c1cccc60361",
            "dhcp_options_id": "dopt-06d53219e83e98a9e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b19dd4a902b506cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028cd150230219628",
            "owner_id": "908061117191",
            "tags": {
              "Name": "goit-devops-project-vpc"
            },
            "tags_all": {
              "Name": "goit-devops-project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}